--- a/.github/workflows/pr-main.yml
+++ b/.github/workflows/pr-main.yml
@@ -70,14 +70,14 @@ jobs:
   #     build_type: explorer
 
   test:
-    needs: [ inspect-changes, build-image, build-manylinux-ttxla ]
+    needs: [ inspect-changes, build-image, build-manylinux-ttxla, build-ttxla-release ]
     if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true'
     uses: ./.github/workflows/call-test.yml
     secrets: inherit
     with:
       test_suite: basic-test.json
       docker_image: ${{ needs.build-image.outputs.docker-image-base }}
-      artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+      artifact_release_run_id: ${{ github.run_id }}
       wheel_release_artifact_name: xla-whl-manylinux
       wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_release_vllm_tt_artifact_name }}
       alchemist_artifact_name: ${{ needs.build-ttxla-release.outputs.alchemist_artifact_name }}
