--- a/.github/workflows/pr-main.yml
+++ b/.github/workflows/pr-main.yml
@@ -127,16 +127,16 @@ jobs:
   #     ref: main
   #     perf_regression_check: true
 
-  # test_forge_models_push:
-  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
-  #   uses: ./.github/workflows/call-test.yml
-  #   secrets: inherit
-  #   needs: [ inspect-changes, build-image, build-ttxla-release ]
-  #   with:
-  #     test_suite: model-test-push.json
-  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
-  #     artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
-  #     wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
+  test_forge_models_push:
+    if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
+    uses: ./.github/workflows/call-test.yml
+    secrets: inherit
+    needs: [ inspect-changes, build-image, build-ttxla-release, build-manylinux-ttxla ]
+    with:
+      test_suite: model-test-push.json
+      docker_image: ${{ needs.build-image.outputs.docker-image }}
+      artifact_release_run_id: ${{ github.run_id }}
+      wheel_release_artifact_name: xla-whl-manylinux
 
   # test_models_on_uplift:
   #   if: needs.inspect-changes.outputs.run-uplift-model-tests == 'true'
