--- a/tests/integrations/vllm_plugin/generative/test_config/model_configs_tensor_parallel_llmbox.yaml
+++ b/tests/integrations/vllm_plugin/generative/test_config/model_configs_tensor_parallel_llmbox.yaml
@@ -196,3 +196,9 @@ model_configs:
     model: Qwen/Qwen3-Next-80B-A3B-Instruct
   vllm_sweep_seed_oss:
     model: ByteDance-Seed/Seed-OSS-36B-Instruct
+  vllm_sweep_grok1:
+    model: hpcai-tech/grok-1
+  vllm_sweep_mimo:
+    model: XiaomiMiMo/MiMo-7B-RL
+  vllm_sweep_olmo3:
+    model: allenai/Olmo-3-7B-Instruct
