--- a/tests/integrations/vllm_plugin/generative/test_config/model_configs_tensor_parallel_llmbox.yaml
+++ b/tests/integrations/vllm_plugin/generative/test_config/model_configs_tensor_parallel_llmbox.yaml
@@ -202,3 +202,9 @@ model_configs:
     model: XiaomiMiMo/MiMo-7B-RL
   vllm_sweep_olmo3:
     model: allenai/Olmo-3-7B-Instruct
+  vllm_sweep_glm4_moe:
+    model: zai-org/GLM-4.5
+  # vllm_sweep_longcat_flash: # 560B parameter model
+  #   model: meituan-longcat/LongCat-Flash-Chat
+  # vllm_sweep_dots1: # 142B parameter model
+  #   model: rednote-hilab/dots.llm1.base
